# emu

./: .gitignore  CMakeLists.txt  README.md
cmake/: gen.cmake
src/: Bus.cpp  Bus.h  GdbServer.h  Ram-inl.h  Ram.h  Registers.cpp  Registers.h  Rom-inl.h  Rom.h  Types.h  gen.py  gen.sh  main.cpp
src/cpu/: Cpu-inl.h  Cpu.cpp  Cpu.h  Immediate.cpp  Immediate.h  ImmediateOperand.cpp  InstructionDecoder.cpp  InstructionDecoder.h  InstructionFetcher.cpp  InstructionFetcher.h  InstructionSet.cpp  InstructionSet.h  MemoryOperand.cpp  MemoryOperand.h  ModRm.cpp  ModRm.h  ModRmOperand.cpp  Opcode.cpp  Opcode.h  RegisterOperand.cpp  SegmentRegisterOperand.cpp  SegmentRegisterOperand.h  Types.h
src/cpu/insts/: AllInstructions.h  Clc.cpp  Cld.cpp  Cli.cpp  Cli.h  Cmp.cpp  Hlt.cpp  Illegal.cpp  Illegal.h  In.cpp  Instruction.h  Jb.cpp  Jbe.cpp  Jl.cpp  Jle.cpp  Jmp.cpp  Jmp.h  Jmpf.cpp  Jnb.cpp  Jnbe.cpp  Jnl.cpp  Jnle.cpp  Jno.cpp  Jnp.cpp  Jns.cpp  Jnz.cpp  Jo.cpp  Jp.cpp  Js.cpp  Jz.cpp  Lahf.cpp  Mov-inl.h  Mov.cpp  Mov.h  Out.cpp  Rcl.cpp  Rcr.cpp  Rol.cpp  Ror.cpp  Sahf.cpp  (+10 more)
src/cpu/operands/: ImmediateOperand.cpp  ImmediateOperand.h  MemoryOperand.cpp  MemoryOperand.h  ModRmOperand.cpp  ModRmOperand.h  PointerOperand.cpp  PointerOperand.h  RegisterOperand.cpp  RegisterOperand.h  RelativeOffsetOperand.cpp  RelativeOffsetOperand.h  SegmentRegisterOperand.cpp  SegmentRegisterOperand.h
src/peripherals/: Cmos.cpp  Cmos.h  Ps2.cpp  Ps2.h
src/py/: genAllInstructions.py  genInstructionDecoder.py
tests/: CMakeLists.txt  EmuTest.cpp  EmuTest.h
tests/insts/: Cli.cpp
